comenting out 'adding all cancer driver genes'

--- a/src/app/dialogs/launch-analysis/launch-analysis.component.html
+++ b/src/app/dialogs/launch-analysis/launch-analysis.component.html
@@ -91,14 +91,14 @@
           </p>
         </div>
 
-        <div class="field" *ngIf="target === 'drug-target'">
-          <label class="label">Include non-seed cancer driver genes</label>
-          <app-toggle textOn="Include" textOff="Ignore"
-                      tooltipOn="Include cancer driver genes that are not seeds."
-                      tooltipOff="Exclude cancer driver genes that are not seeds."
-                      [(value)]="trustrankIncludeCancerNonSeeds">
-          </app-toggle>
-        </div>
+<!--        <div class="field" *ngIf="target === 'drug-target'">-->
+<!--          <label class="label">Include non-seed cancer driver genes</label>-->
+<!--          <app-toggle textOn="Include" textOff="Ignore"-->
+<!--                      tooltipOn="Include cancer driver genes that are not seeds."-->
+<!--                      tooltipOff="Exclude cancer driver genes that are not seeds."-->
+<!--                      [(value)]="trustrankIncludeCancerNonSeeds">-->
+<!--          </app-toggle>-->
+<!--        </div>-->
 
         <div class="field">
           <label class="label">Mutation Weights</label>
@@ -121,7 +121,7 @@
                   connected to a (trusted) set of seed nodes.
                 </p>
                 <p>
-                  <a href="https://docs.google.com/document/d/1_SRnIx_UC8FR59rMyrf_r45fCIt3naP4t1qefYNp9vk" target="_blank">
+                  <a href="https://drive.google.com/file/d/1OHJXf8Ui8UIGL6DVNoQlRMAHY5dC_lVS/view" target="_blank">
                     Check the documentation for more info
                   </a>
                 </p>
@@ -183,13 +183,13 @@
           </p>
         </div>
 
-        <div class="field" *ngIf="target === 'drug-target'">
-          <label class="label">Include non-seed cancer driver genes</label>
-          <app-toggle textOn="Include" textOff="Ignore"
-                      tooltipOn="Include cancer driver genes that are not seeds."
-                      tooltipOff="Exclude cancer driver genes that are not seeds."
-                      [(value)]="harmonicIncludeCancerNonSeeds"></app-toggle>
-        </div>
+<!--        <div class="field" *ngIf="target === 'drug-target'">-->
+<!--          <label class="label">Include non-seed cancer driver genes</label>-->
+<!--          <app-toggle textOn="Include" textOff="Ignore"-->
+<!--                      tooltipOn="Include cancer driver genes that are not seeds."-->
+<!--                      tooltipOff="Exclude cancer driver genes that are not seeds."-->
+<!--                      [(value)]="harmonicIncludeCancerNonSeeds"></app-toggle>-->
+<!--        </div>-->
 
         <div class="field">
           <label class="label">Mutation Weights</label>
@@ -246,13 +246,13 @@
           </p>
         </div>
 
-        <div class="field" *ngIf="target === 'drug-target'">
-          <label class="label">Include non-seed cancer genes</label>
-          <app-toggle textOn="Include" textOff="Ignore"
-                      tooltipOn="Include cancer genes that are not seeds."
-                      tooltipOff="Exclude cancer genes that are not seeds."
-                      [(value)]="degreeIncludeCancerNonSeeds"></app-toggle>
-        </div>
+<!--        <div class="field" *ngIf="target === 'drug-target'">-->
+<!--          <label class="label">Include non-seed cancer genes</label>-->
+<!--          <app-toggle textOn="Include" textOff="Ignore"-->
+<!--                      tooltipOn="Include cancer genes that are not seeds."-->
+<!--                      tooltipOff="Exclude cancer genes that are not seeds."-->
+<!--                      [(value)]="degreeIncludeCancerNonSeeds"></app-toggle>-->
+<!--        </div>-->
 
         <div class="box">
           <article class="media">
@@ -371,13 +371,13 @@
           </p>
         </div>
 
-        <div class="field">
-          <label class="label">Include non-seed cancer driver genes</label>
-          <app-toggle textOn="Include" textOff="Ignore"
-                      tooltipOn="Include cancer driver genes that are not seeds."
-                      tooltipOff="Exclude cancer driver genes that are not seeds."
-                      [(value)]="betweennessIncludeCancerNonSeeds"></app-toggle>
-        </div>
+<!--        <div class="field">-->
+<!--          <label class="label">Include non-seed cancer driver genes</label>-->
+<!--          <app-toggle textOn="Include" textOff="Ignore"-->
+<!--                      tooltipOn="Include cancer driver genes that are not seeds."-->
+<!--                      tooltipOff="Exclude cancer driver genes that are not seeds."-->
+<!--                      [(value)]="betweennessIncludeCancerNonSeeds"></app-toggle>-->
+<!--        </div>-->
 
         <div class="field">
           <label class="label">Mutation Weights</label>
@@ -510,13 +510,13 @@
           </p>
         </div>
 
-        <div class="field" *ngIf="target === 'drug-target'">
-          <label class="label">Include non-seed cancer driver genes</label>
-          <app-toggle textOn="Include" textOff="Ignore"
-                      tooltipOn="Include cancer driver genes that are not seeds."
-                      tooltipOff="Exclude vcancer driver genes that are not seeds."
-                      [(value)]="multisteinerIncludeCancerNonSeeds"></app-toggle>
-        </div>
+<!--        <div class="field" *ngIf="target === 'drug-target'">-->
+<!--          <label class="label">Include non-seed cancer driver genes</label>-->
+<!--          <app-toggle textOn="Include" textOff="Ignore"-->
+<!--                      tooltipOn="Include cancer driver genes that are not seeds."-->
+<!--                      tooltipOff="Exclude vcancer driver genes that are not seeds."-->
+<!--                      [(value)]="multisteinerIncludeCancerNonSeeds"></app-toggle>-->
+<!--        </div>-->
 
         <div class="field">
           <label class="label">Mutation Weights</label>
@@ -569,7 +569,7 @@
         <p class="help">
           Automatically filter edges to make network more clear by only showing shorter pathways.
 
-          <a href="https://docs.google.com/document/d/1_SRnIx_UC8FR59rMyrf_r45fCIt3naP4t1qefYNp9vk" target="_blank">
+          <a href="https://drive.google.com/file/d/1OHJXf8Ui8UIGL6DVNoQlRMAHY5dC_lVS/view" target="_blank">
             Check the documentation for more info
           </a>
 
@@ -577,7 +577,7 @@
       </div>
 
       <p class="doc-link">
-        <a href="https://docs.google.com/document/d/1_SRnIx_UC8FR59rMyrf_r45fCIt3naP4t1qefYNp9vk" target="_blank">
+        <a href="https://drive.google.com/file/d/1OHJXf8Ui8UIGL6DVNoQlRMAHY5dC_lVS/view" target="_blank">
           Check the documentation for more info
         </a>
       </p>
