--- a/src/app/pages/explorer-page/explorer-page.component.html
+++ b/src/app/pages/explorer-page/explorer-page.component.html
@@ -15,6 +15,7 @@
     [visibleNodes]="currentViewNodes"
     [currentCancerDataset]="currentDataset"
     [currentCancerTypeItems]="currentCancerTypeItems"
+    (showChange)="showChangeCustomGenes"
   >
   </app-custom-genes>
 
@@ -28,6 +29,7 @@
   </app-add-expressed-genes>
 
   <app-disease-related-genes [(show)]="showDiseaseSelectionDialog"
+                             (showChange)="showChangeDiseaseSelectionDialog"
                              [visibleNodes]="currentViewNodes"
                              [currentCancerDataset]="currentDataset"
                              [currentViewGenes]="currentViewGenes"
