--- a/src/app/pages/explorer-page/explorer-page.component.html
+++ b/src/app/pages/explorer-page/explorer-page.component.html
@@ -851,7 +851,11 @@
         </header>
         <div *ngIf="collapseTask">
           <div class="card-content overflow" *ngIf="analysis.tasks && analysis.tasks.length > 0">
-            <app-task-list [(token)]="selectedAnalysisToken" [taskList]="analysis.tasks"></app-task-list>
+            <app-task-list
+              [taskList]="analysis.tasks"
+              (tokenChange)="setTaskToken($event)"
+            >
+            </app-task-list>
           </div>
           <footer class="card-footer">
             <a *ngIf="analysis.tasks && analysis.tasks.length > 0"
